--- a/index.html
+++ b/index.html
@@ -10,13 +10,63 @@
     <link rel="stylesheet" href="css/fontawesome/font-awesome.min.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link href="https://fonts.googleapis.com/css?family=Hind:400,500,600" rel="stylesheet">
-    
-
-
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">        
 </head>
-<body>
+<body>    
 <header>
+    <div class="block1 contacts-information clearfix">
+        <div class="address-block">
+            <div class="city">
+                <span>Philadelphia<i class="fa fa-angle-down" aria-hidden="true"></i></span>
+            </div>
+            <div class="phone">
+                <span><i class="fa fa-phone" aria-hidden="true"></i>Toll-free: 800-455-0054</span>
+            </div>
+            <div class="address">
+                <span><i class="fa fa-location-arrow" aria-hidden="true"></i>200 Industrial Highway  </span>
+            </div>
+        </div>
+        <div class="social-icons">
+            <ul>               
+                <li><a href="<#>" target="blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+                <li><a href="<#>" target="blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+                <li><a href="<#>" target="blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                <li><a href="<#>" target="blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                <li><a href="<#>" target="blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+            </ul>
+        </div>
+    </div>
+    <!--2-bg#ffffff-->
+    <div class="block2-logo-section clearfix">
+        <div class="logo">
+            <a href="/"><img src="img/logo.png" alt="logo"></a>
+        </div>
+        <div class="block2-static-info">
+            <ul>
+                <li>
+                    <p class="block2-first-item"><i class="fa fa-check-circle-o" aria-hidden="true"></i></p>
+                    <p>
+                        <span class="block2-title">Certified</span>
+                        <span class="block2-subtitle">Subtitle 1</span>
+                    </p>
+                </li>
+                <li>
+                    <p><i class="fa fa-check-circle-o" aria-hidden="true"></i></p>
+                    <p>
+                        <span class="block2-title">EnerSys Supplier</span>
+                        <span class="block2-subtitle">Subtitle 2</span>
+                    </p>
+                </li>
+                <li>
+                    <p><i class="fa fa-check-circle-o" aria-hidden="true"></i></p>
+                    <p>
+                        <span class="block2-title">EnerSys Service </span>
+                        <span class="block2-subtitle">Subtitle 3</span>
+                    </p>
+                </li>
+            </ul>
+        </div>
+    </div>
 </header>
 </body>
 </html>
