--- a/index.html
+++ b/index.html
@@ -14,6 +14,127 @@
 </head>
 <body>    
 <header>
+    <!--BLOCK1-->
+    <style>
+    *{
+    margin: 0;
+    padding: 0;
+}
+body{
+    font: 400 14px/1.5 'Hind', sans-serif;
+    color: #565655;
+}
+ul{
+    list-style: none;
+}
+ul li{
+    display: inline-block;
+}
+a{
+    text-decoration: none;
+    color: #333;
+    -webkit-transition: all .2s;
+    -moz-transition: all .2s;
+    -ms-transition: all .2s;
+    -o-transition: all .2s;
+    transition: all .2s;
+
+}
+a:hover{
+    color: #222;
+}
+.clearfix:after,
+.clearfix:before{
+    display: table;
+    content: '';
+}
+.clearfix:after{
+    clear: both;
+}
+/*    HEADER   */
+.contacts-information{
+    background: #ededed;
+    padding: 13px 100px;
+}
+.address-block{
+    float: left;
+    padding-left: 35px;
+}
+.address-block div{
+    display: inline-block;
+    margin-right: 15px;
+}
+.social-icons{
+    float: right;
+    margin-top: 7px;
+}
+.social-icons ul li{
+    margin-left: 20px;
+}
+.fa-phone,
+.fa-location-arrow{
+    color: #000;
+}
+.city{
+    background: #000;
+    color: #fff;
+    border-radius: 3px;
+    padding: 6px 16px;
+}
+.fa-angle-down{
+    margin-left: 15px;
+    font-size: 18px;
+    margin-top: 2px;
+}
+
+
+/****   BLOCK2*******************************************2   */
+.logo-section{
+    padding: 29px 100px;
+    background: #fff;
+}
+.logo{
+    float: left;
+    width: auto;
+    height: 50px;  
+    padding-left: 130px;
+    padding-bottom: 55px;
+    padding-top: 35px;
+}
+.block2-static-info {
+    float: right;
+    margin-top: 46px;
+    padding-right: 57px;
+}
+.block2-title{
+    color: #000;
+    font-weight: 600;
+    font-size: 15px;
+}
+.block2-static-info li p:first-of-type{
+    float: left;
+    margin-right: 15px;
+    color: #000;
+    font-size: 18px;
+}
+.block2-static-info li p:last-of-type{
+    display: inline-block;
+}
+.block2-static-info p > span{
+    display: block;
+}
+.block2-static-info ul li{
+    padding-right: 35px;
+    border-right: 1px solid #e6e6e6;
+    margin-right: 20px;
+    margin-top: 
+}
+.block2-static-info ul li:last-of-type{
+    border-right: none;
+    padding-right: 0;
+    margin-right: 0;
+}
+    </style>
     <div class="block1 contacts-information clearfix">
         <div class="address-block">
             <div class="city">
