--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>    
 <header>
     <!--BLOCK1-->
-    <style>
+    <!--style>
     *{
     margin: 0;
     padding: 0;
@@ -134,7 +134,7 @@ a:hover{
     padding-right: 0;
     margin-right: 0;
 }
-    </style>
+    </style-->
     <div class="block1 contacts-information clearfix">
         <div class="address-block">
             <div class="city">
