--- a/index.html
+++ b/index.html
@@ -188,6 +188,56 @@ a:hover{
             </ul>
         </div>
     </div>
+    <style>
+    /*  BLOCK3  */
+.mobile-menu{}
+
+.navigation{
+    background: #000;
+    padding: 0 100px;
+    position: relative;
+}
+.navigation nav{
+    float: left;
+}
+nav li a{
+    color: #fff;
+    font-size: 16px;
+    padding: 24px 16px 16px;
+    display: inline-block;
+    text-transform: uppercase;
+    border-bottom: 7px solid transparent;
+}
+nav li a:hover{
+    color: #fff;
+    border-bottom: 6px solid #bd2631;
+}
+.current a{
+    border-bottom: 6px solid #bd2631;
+
+}
+.search{
+    float: right;
+    color: #fff;
+    line-height: 3.5;
+    font-size: 19px;
+}
+    </style>
+    <div class="block3 navigation clearfix" style="position: relative;">
+        <nav class="mobile-menu">
+            <ul>               
+                <li class="current"><a href="/">Home</a></li>
+                <li><a href="/pages/about.php">About</a></li>
+                <li><a href="/pages/Products">Products</a></li>
+                <li><a href="/pages/Services">Services</a></li>
+                <li><a href="/pages/Rentals">Rentals</a></li>
+                <li><a href="/pages/Learning">Learning</a></li>
+                <li><a href="/pages/Contact">Contact</a></li>
+            </ul>
+        </nav>         
+      <div class="search"><i class="fa fa-search" aria-hidden="true" ></i></div>
+    </div>   
+ 
 </header>
 </body>
 </html>
