--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ a:hover{
             </ul>
         </div>
     </div>
-    <!--style>
+    <style>
     /*  BLOCK3  */
 .mobile-menu{}
 
@@ -222,7 +222,7 @@ nav li a:hover{
     line-height: 3.5;
     font-size: 19px;
 }
-    </style-->
+    </style>
     <div class="block3 navigation clearfix" style="position: relative;">
         <nav class="mobile-menu">
             <ul>               
