--- a/index.html
+++ b/index.html
@@ -188,6 +188,36 @@ a:hover{
             </ul>
         </div>
     </div>
+    <!--BLOCK4-->
+    <style>
+        .block4-carusel{
+            background: none;
+            padding: 0;
+             position: relative;
+            left: 0;
+            rigth: 0;
+        }
+       
+        .carusel img{
+  width: 100%;
+  height: 638px;
+  /* по умолчанию inline, в ряде браузеров это даст лишнее пространство вокруг элементов */
+  display: block;
+}
+        }
+    </style>
+    <div class="block4-carusel">     
+        <div id="carousel" class="carousel">
+            <button class="arrow prev"><i class="fa fa-angle-left" aria-hidden="true"></i></button>
+                <div class="gallery">
+                    <ul class="images">
+                        <li><img src="img/man.png"></li>
+                    </ul>
+                </div>
+            <button class="arrow prev"><i class="fa fa-angle-right" aria-hidden="true"></i></button>
+        </div>
+    </div>                        
+                        
     <style>
     /*  BLOCK3  */
 .mobile-menu{}
@@ -195,7 +225,7 @@ a:hover{
 .navigation{
     background: #000;
     padding: 0 127px;
-    position: relative;
+    position: absolute;
 }
 .navigation nav{
     float: left;
