--- a/index.html
+++ b/index.html
@@ -190,13 +190,15 @@ a:hover{
     </div>
         <style>
     /*  BLOCK3  */
-.absol: {position: absolute; }
+.absol {
+    position: absolute; 
+  }
 .mobile-menu{
            
             }
 
 .navigation{
-    background: rgba(0,0,0,.9);
+    background: rgba(0,0,0,.8);
     padding: 0 127px;
     
 }
