--- a/index.html
+++ b/index.html
@@ -200,6 +200,8 @@ a:hover{
 .navigation{
     background: rgba(0,0,0,.8);
     padding: 0 127px;
+     left: 0;
+    right: 0;
     
 }
 .navigation nav{
