--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@ a:hover{
     </div>
         <style>
     /*  BLOCK3  */
-.absol {
-    position: absolute; 
+.rel {
+    position: relative; 
   }
 .mobile-menu{
            
@@ -200,6 +200,7 @@ a:hover{
 .navigation{
     background: rgba(0,0,0,.8);
     padding: 0 127px;
+    position: absolute;
      left: 0;
     right: 0;
     
@@ -230,8 +231,8 @@ nav li a:hover{
     font-size: 19px;
 }
     </style>
- <div class="absol">   
-    <div class="block3 navigation clearfix" style="position: relative;">
+ <div class="rel">   
+    <div class="block3 navigation clearfix">
         <nav class="mobile-menu">
             <ul>               
                 <li class="current"><a href="/">Home</a></li>
