--- a/index.html
+++ b/index.html
@@ -642,14 +642,10 @@ nav li a:hover{
 <section>    
     <div class="block6-logo-section2-contacts-information1-text-nav  clearfix">
         <div class="left-text-static-info">
-            <ul>
-                <li>
-                    <p class="block6-first-item">
-                        <span class="block6-title">Reuest a Free Site Survey or Quote</span>
-                        <span class="block6-subtitle">UPS Battery and Uninterruptible Power Supply Sales and Installation</span>
-                    </p>
-                </li>
-            </ul>
+            <div class="block6-first-item">
+                        <p class="block6-title">Reuest a Free Site Survey or Quote</p>
+                        <p class="block6-subtitle">UPS Battery and Uninterruptible Power Supply Sales and Installation</p>
+            </div>
         </div>    
         <div class="right-button">
             <a class="button" href="#">Get a Quote</button>
@@ -661,19 +657,25 @@ nav li a:hover{
     <div class="block7-content-pic-pic-pic clearfix">
         <div class="block7-inner-content-pic-pic-pic">
             <div class="block7-row">
-                <div class="content50-pic-pic-pic">
+                <div class="content50-pic-pic-pic" style="position: relative;">
                     <div class="inner-content50-pic-pic-pic">
-                    <img src="img/slide-1.jpg" alt="">
-                    </div> 
-                </div>
-                <div class="content25-pic-pic-pic">
-                    <div class="inner-content25-pic-pic-pic">
-                    <img src="img/slide-1.jpg" alt="">                    
+                    <img src="img/Products.png" alt="">
+                    </div>
+                    <div class="example-left" style="position: absolute; top: 0; bottom: 0; right: 0; left: 0;">
+                            <p class="block789-title-red">Products</p>
+                             <p class="block789-title">Super power is a leading distributor power products and solutions, including</p>    
+                              <p class="block789-title">batteries, UPS systems, telecom power systems, emergency lighting and DC power</p>
+                              <p class="block789-title">systems.</p>
                     </div>
                 </div>
                 <div class="content25-pic-pic-pic">
                     <div class="inner-content25-pic-pic-pic">
-                    <img src="img/slide-1.jpg" alt="">            
+                    <img src="img/loader.png" alt="">                    
+                    </div>
+                </div>
+                <div class="content25-pic-pic-pic">
+                    <div class="inner-content25-pic-pic-pic">
+                    <img src="img/acum.png" alt="">            
                     </div>
                 </div>   
             </div>
@@ -687,18 +689,24 @@ nav li a:hover{
             <div class="block8-row">
                 <div class="content25-pic-pic-pic">
                     <div class="inner-content25-pic-pic-pic">
-                    <img src="img/slide-1.jpg" alt="">
+                    <img src="img/control.png" alt="">
                     </div> 
                 </div>
                 <div class="content25-pic-pic-pic">
                     <div class="inner-content25-pic-pic-pic">
-                    <img src="img/slide-1.jpg" alt="">                    
+                    <img src="img/gear.png" alt="">                    
                     </div>
                 </div>
-                <div class="content50-pic-pic-pic">
-                    <div class="inner-content50-pic-pic-pic">
-                    <img src="img/slide-1.jpg" alt="">            
+                <div class="content50-pic-pic-pic" style="position: relative;>
+                    <div class="inner-content50-pic-pic-pic" >
+                    <img src="img/services.png" alt="">            
                     </div>
+                    <div class="example-right" style="position: absolute; top: 0; bottom: 0; right: 0; left: 0;">
+                            <p class="block789-title-red">Services</p>
+                            <p class="block789-title">We offer certified and insured installation by trained technicians, emergency repair,</p>
+                            <p class="block789-title">rental UPS, maintenance services, battery testing, sizing and more.</p>
+                            
+                     </div> 
                 </div>   
             </div>
         </div>        
@@ -709,19 +717,24 @@ nav li a:hover{
     <div class="block9-content-pic-pic-pic clearfix">
         <div class="block9-inner-content-pic-pic-pic">
             <div class="block9-row">
-                <div class="content50-pic-pic-pic">
+                <div class="content50-pic-pic-pic" style="position: relative;">
                     <div class="inner-content50-pic-pic-pic">
                     <img src="img/slide-1.jpg" alt="">
-                    </div> 
-                </div>
-                <div class="content25-pic-pic-pic">
-                    <div class="inner-content25-pic-pic-pic">
-                    <img src="img/slide-1.jpg" alt="">                    
+                    </div>
+                    <div class="example-left" style="position: absolute; top: 0; bottom: 0; right: 0; left: 0;">
+                            <p class="block789-title-red">Battery Disposal</p>
+                            <p class="block789-title">From de-installations to removal logistics, we can handle your battery disposal needs.</p>    
+                            <p class="block789-title">Our disposal services follow all applicable state and federal recycling certitifications.</p>
                     </div>
                 </div>
                 <div class="content25-pic-pic-pic">
                     <div class="inner-content25-pic-pic-pic">
-                    <img src="img/slide-1.jpg" alt="">            
+                    <img src="img/trash.png" alt="">                    
+                    </div>
+                </div>
+                <div class="content25-pic-pic-pic">
+                    <div class="inner-content25-pic-pic-pic">
+                    <img src="img/ups.png" alt="">            
                     </div>
                 </div>   
             </div>
