--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ margin-top: 30px;
     
     width: 100%;
     float:left;
-    min-height: 500px;
+    min-height: 452px;
 }
     .content25-pic-pic-pic{
     width: 25%;
@@ -465,6 +465,32 @@ margin-top: 30px;
 .inner-content50-pic-pic-pic{
 /*background: url(img/);*/
 }
+
+.example-left{
+    padding-left: 102px:
+    padding-top: 170px;
+    float: left; 
+}
+.example-left p{
+    margin-bottom:  29px;
+
+} 
+.example-right{
+    padding-right: 102px:/*forgot*/
+    padding-top: 164px;
+    float: right;
+}
+.example-right p{
+    margin-bottom:  26px;
+}
+.block789-title-red{
+    margin-bottom: 62px;
+    margin-right: 0;
+    color: red;
+    font-size: 30px;
+    font-weight: 600;
+
+}        
 
 /********************************************************10/
 /*  BLOCK10  */
