--- a/index.html
+++ b/index.html
@@ -452,6 +452,7 @@ margin-top: 30px;
     .content25-pic-pic-pic{
     width: 25%;
     float:left;
+    position: relative;
     /*padding-right: 10px;*/
 }
 .inner-content25-pic-pic-pic{
@@ -460,6 +461,7 @@ margin-top: 30px;
 .content50-pic-pic-pic{
     width: 50%;
     float:left;
+    position: relative;
     /*padding-right: 10px;*/
 }
 .inner-content50-pic-pic-pic{
@@ -470,15 +472,26 @@ margin-top: 30px;
     padding-left: 102px:
     padding-top: 170px;
     float: left; 
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
 .example-left p{
     margin-bottom:  29px;
+    
 
 } 
 .example-right{
     padding-right: 102px:/*forgot*/
     padding-top: 164px;
     float: right;
+    position: absolute;
+    top: 0;
+    bottom: 0; 
+    right: 0; 
+    left: 0;
 }
 .example-right p{
     margin-bottom:  26px;
@@ -683,7 +696,7 @@ nav li a:hover{
     <div class="block7-content-pic-pic-pic clearfix">
         <div class="block7-inner-content-pic-pic-pic">
             <div class="block7-row">
-                <div class="content50-pic-pic-pic" style="position: relative;">
+                <div class="content50-pic-pic-pic" style="position: relative">
                     <div class="inner-content50-pic-pic-pic">
                     <img src="img/Products.png" alt="">
                     </div>
