--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@ nav li a:hover{
             <div class="block9-row">
                 <div class="content50-pic-pic-pic" style="position: relative;">
                     <div class="inner-content50-pic-pic-pic">
-                    <img src="img/slide-1.jpg" alt="">
+                    <img src="img/disposal.png" alt="">
                     </div>
                     <div class="example-left" style="position: absolute; top: 0; bottom: 0; right: 0; left: 0;">
                             <p class="block789-title-red">Battery Disposal</p>
