--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@ margin-top: 30px;
     .content25-pic-pic-pic{
     width: 25%;
     float:left;
-    position: relative;
+    
     /*padding-right: 10px;*/
 }
 .inner-content25-pic-pic-pic{
@@ -731,7 +731,7 @@ nav li a:hover{
                     <img src="img/gear.png" alt="">                    
                     </div>
                 </div>
-                <div class="content50-pic-pic-pic" style="position: relative;>
+                <div class="content50-pic-pic-pic" >
                     <div class="inner-content50-pic-pic-pic" >
                     <img src="img/services.png" alt="">            
                     </div>
