--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ nav li a:hover{
             
                 <div class="gallery">
                     <ul class="images">
-                        <li><img src="img/man.png"></li>
+                        <li><img src="img/man.jpg"></li>
                     </ul>
                 </div>
             
@@ -875,27 +875,27 @@ nav li a:hover{
             <div class="block12-row">
                 <div class="content20-pic-pic-pic-pic-pic">
                     <div class="inner-content20-pic-pic-pic-pic-pic">
-                        <img src="img/slide-1.jpg" alt="" title="">                    
+                        <img src="img/1.jpg" alt="" title="">                    
                     </div>
                 </div>
                 <div class="content20-pic-pic-pic-pic-pic">
                     <div class="inner-content20-pic-pic-pic-pic-pic">
-                        <img src="img/slide-1.jpg" alt="" title="">                    
+                        <img src="img/2.jpg" alt="" title="">                    
                     </div>
                 </div>
                 <div class="content20-pic-pic-pic-pic-pic">
                     <div class="inner-content20-pic-pic-pic-pic-pic">
-                        <img src="img/slide-1.jpg" alt="" title="">                    
+                        <img src="img/3.jpg" alt="" title="">                    
                     </div>
                 </div>
                 <div class="content20-pic-pic-pic-pic-pic">
                     <div class="inner-content20-pic-pic-pic-pic-pic">
-                        <img src="img/slide-1.jpg" alt="" title="">                    
+                        <img src="img/4.jpg" alt="" title="">                    
                     </div>
                 </div>
                 <div class="content20-pic-pic-pic-pic-pic">
                     <div class="inner-content20-pic-pic-pic-pic-pic">
-                        <img src="img/slide-1.jpg" alt="" title="">                    
+                        <img src="img/5.jpg" alt="" title="">                    
                     </div>
                 </div> 
             </div>
