--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@ nav li a:hover{
 <section>  
     <div class="block8-content-pic-pic-pic clearfix">
         <div class="block8-inner-content-pic-pic-pic"-->
-            <div class="block8-row">
+            <div class="block8-row clearfix">
                 <div class="content25-pic-pic-pic">
                     <div class="inner-content25-pic-pic-pic">
                     <img src="img/control.jpg" alt="">
@@ -782,7 +782,7 @@ nav li a:hover{
 <section>  
     <div class="block9-content-pic-pic-pic clearfix">
         <div class="block9-inner-content-pic-pic-pic"-->
-            <div class="block9-row">
+            <div class="block9-row ">
                 <div class="content50-pic-pic-pic" style="position: relative;">
                     <div class="inner-content50-pic-pic-pic">
                     <img src="img/disposal.jpg" alt="">
