--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@ nav li a:hover{
 <section>  
     <div class="block7-content-pic-pic-pic clearfix">
         <div class="block7-inner-content-pic-pic-pic">
-            <div class="block7-row">
+            <div class="block7-row clearfix">
                 <div class="content50-pic-pic-pic" style="position: relative">
                     <div class="inner-content50-pic-pic-pic">
                     <img src="img/Products.jpg" alt="">
