--- a/index.html
+++ b/index.html
@@ -704,8 +704,12 @@ nav li a:hover{
     color: #222;
     border-bottom: 6px solid #bd2631;
 }
+#black{
+    background:color: #000;
+  
+     }     
     </style>
-<section>    
+<section id="black">    
     <div class="block6-logo-section2-contacts-information1-text-nav  clearfix">
         <div class="left-text-static-info">
             <div class="block6-first-item">
@@ -765,7 +769,7 @@ nav li a:hover{
                 </div>
                 <div class="content50-pic-pic-pic" >
                     <div class="inner-content50-pic-pic-pic" >
-                    <img src="img/services.jpg" alt="">            
+                    <img src="img/services.png" alt="">            
                     </div>
                     <div class="example-right" style="position: absolute; top: 0; bottom: 0; right: 0; left: 0;">
                             <p class="block789-title-red">Services</p>
@@ -800,7 +804,7 @@ nav li a:hover{
                 </div>
                 <div class="content25-pic-pic-pic">
                     <div class="inner-content25-pic-pic-pic">
-                    <img src="img/ups.jpg" alt="">            
+                    <img src="img/ups.png" alt="">            
                     </div>
                 </div>   
             </div>
