--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@ nav li a:hover{
             <div class="block7-row clearfix">
                 <div class="content50-pic-pic-pic" style="position: relative">
                     <div class="inner-content50-pic-pic-pic">
-                    <id="black" img src="img/Products.jpg" alt="">
+                    <img src="img/Products.jpg" alt="">
                     </div>
                     <div class="example-left" style="position: absolute; top: 0; bottom: 0; right: 0; left: 0;">
                             <p class="block789-title-red">Products</p>
