--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ margin: 0;
     <style>
 .block6-logo-section2-contacts-information1-text-nav{
 	background: #bd2631; 
-	padding: 50px 10px;
+	padding: 24px 140px;
 	}
 .block6-left-text-static-info{
     float: left;
@@ -401,8 +401,12 @@ margin: 0;
 .block6-subtitle{
     font-size: 24px;
 }
+	    
 .right-button{
-float: right;
+	padding:20px;
+	float: right;
+}
+.button{
 background: #ffffff;
 color: #333;
 border-radius: 3px;
