--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ margin: 0;
     <style>
 .block6-logo-section2-contacts-information1-text-nav{
 	background: #bd2631; 
-	padding: 24px 140px;
+	padding: 24px 140px 24px 50px;
 	}
 .block6-left-text-static-info{
     float: left;
@@ -402,11 +402,8 @@ margin: 0;
     font-size: 24px;
 }
 	    
-.right-button{
-	padding:20px;
-	float: right;
-}
-.button{
+.right-button{	
+float: right;
 background: #ffffff;
 color: #333;
 border-radius: 3px;
