--- a/index.html
+++ b/index.html
@@ -386,14 +386,15 @@ margin: 0;
     <style>
 .block6-logo-section2-contacts-information1-text-nav{
 	background: #bd2631; 
-	padding: 24px 140px 24px 50px;
+	padding: 30px 1px 34px 1px;
 	}
 .block6-left-text-static-info{
     float: left;
 }
 .block6-left-text-static-info p{
-    font-weight: 600;
-    color: #fff;
+font-weight: 600;
+color: #fff;
+padding-left: 138px;
 }
 .block6-title{
     font-size: 30px;
@@ -408,9 +409,9 @@ background: #ffffff;
 color: #333;
 border-radius: 3px;
 display: block;
-width: 120px;
+width: 105px;
 padding: 12px;
-margin: 0 45px;
+margin: 0 25px;
 text-decoration: none;
 text-align: center;
 
