--- a/index.html
+++ b/index.html
@@ -276,14 +276,9 @@ nav li a:hover{
     height: auto;
     display: block;
 }
-  .arrow {
+  /*.arrow {
   position: absolute;
-  
-  /*background: #ddd;*/
-  /*border-radius: 15px;*/
-  /*border: 1px solid gray;*/
-  
-  /*line-height: 24px;*/
+
   color: #fff;
   display: inline-block;
 }
@@ -300,8 +295,45 @@ nav li a:hover{
 }
 .next {
     float: right;
-  /*right: 100%;/*not know*/
+  
+}*/
+	    #slider{
+    width: 100%;
+    height: 562px;
+    background: none;
+    position: relative;
+    overflow: hidden;
 }
+
+.arrow{
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    top: 46%;
+    background: #fff;
+    opacity: 0;
+
+    transition: 0.3s ease;
+}
+
+.left{
+    left: -20px;
+ }
+
+.right{
+    right: -20px;
+}
+
+#slider:hover .left{
+    left: 20px;
+    opacity: 1;
+}
+
+#slider:hover .right{
+    right: 20px;
+    opacity: 1;
+}
+
 .gallery {
   width: 100%;
   overflow: hidden;
@@ -372,10 +404,11 @@ margin: 0;
             
         </div>
     </div>
-    <div class="but">
-        <button class="arrow prev"><i class="fa fa-angle-left" aria-hidden="true"></i></button>
-        <button class="arrow prev"><i class="fa fa-angle-right" aria-hidden="true"></i></button>
-    </div> 
+    
+<div id="slider">
+    <div class="arrow left"><i class="fa fa-angle-left" aria-hidden="true"></i></div>
+    <div class="arrow right"><i class="fa fa-angle-right" aria-hidden="true"></i></div>
+</div>	 
     <div class="block4-example2">
         <p class="block4-title-red">We provide innovative</p>
         <p class="block4-title">Battery back-up solutions for  bussiness.</p>
