--- a/index.html
+++ b/index.html
@@ -204,8 +204,10 @@ a:hover{
     </div>
         <style>
     /*  BLOCK3  */
-.rel {
-    position: relative; 
+/*.rel {*/
+#slider{ 
+    position: relative;
+    overflow: hidden;     
   }
 .mobile-menu{
            
@@ -245,7 +247,7 @@ nav li a:hover{
     font-size: 19px;
 }
     </style>
- <div class="rel">   
+ <div id="slider">   
     <div class="block3 navigation clearfix">
         <nav class="mobile-menu">
             <ul>               
@@ -297,13 +299,7 @@ nav li a:hover{
     float: right;
   
 }*/
-	    #slider{
-    width: 100%;
-    height: 562px;
-    background: none;
-    position: relative;
-    overflow: hidden;
-}
+
 
 .arrow{
     position: absolute;
@@ -405,7 +401,7 @@ margin: 0;
         </div>
     </div>
     
-<div id="slider">
+<div class="but">
     <div class="arrow left"><i class="fa fa-angle-left" aria-hidden="true"></i></div>
     <div class="arrow right"><i class="fa fa-angle-right" aria-hidden="true"></i></div>
 </div>	 
