--- a/index.html
+++ b/index.html
@@ -290,12 +290,15 @@ padding: 0;
 font-size: 43px;
 
 }
-.arrow:focus {
+/*.arrow:focus {
   outline: none;
-}
+}*/
 .arrow:hover {
   background: rgba(0,0,0,.8);
   cursor: pointer;
+width: 27px;
+height:  27px;
+	padding: 10px;
 }	    
 
 .left{
