--- a/index.html
+++ b/index.html
@@ -352,6 +352,7 @@ left: 40px;
 .block4-example2 p{
     float: left;
    margin-bottom: 20px;
+dislpay: block;	
 }                     
 .block4-title-red{                  
 
@@ -373,6 +374,7 @@ left: 40px;
     color:#FFF;
     font-family:Arial, Helvetica, sans-serif;
     font-size:24px;
+    text-transform: uppercase;
        
  }          
         
