--- a/index.html
+++ b/index.html
@@ -352,12 +352,8 @@ left: 40px;
 .block4-example2 p{
     float: left;
    margin-bottom: 20px;
-dislpay: block;	
 }                     
-.block4-title-red{                  
-
-
-
+.block4-title-red{ 
     color:red;
     font-family:Arial, Helvetica, sans-serif;
     font-size: 32px;
@@ -396,9 +392,11 @@ dislpay: block;
     <div class="arrow right"><i class="fa fa-angle-right" aria-hidden="true"></i></div>
 </div>	 
     <div class="block4-example2">
-        <p class="block4-title-red">We provide innovative</p>
-        <p class="block4-title">Battery back-up solutions for  bussiness.</p>
-        <p class="block4-title-last">Vrla batteries are in stock for immediate delivery.</p>         
+	<ul>		    
+        	<li><p class="block4-title-red">We provide innovative</p></li>
+        	<li><p class="block4-title">Battery back-up solutions for  bussiness.</p></li>
+        	<li><p class="block4-title-last">Vrla batteries are in stock for immediate delivery.</p></li>
+	</ul>	
     </div>     
   </div><!--/rel-->
 </header>
