--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ nav li a:hover{
 position: absolute;
 width: 0;/*27px*/
 height: 0;/*27px*/
-top: 46%;
+top: 222px;
 /*background: rgba(0,0,0,.8);*/
 opacity: 0;
 transition: 0.3s ease;
@@ -298,7 +298,7 @@ font-size: 43px;
   cursor: pointer;
 width: 27px;
 height:  27px;
-	padding: 10px;
+padding: 10px;
 }	    
 
 .left{
@@ -336,7 +336,7 @@ padding: 0;
         }
         .fa fa-angle-right{
             float: right;
-            margin-right: 17px;
+            margin-right: 27px;
             height: 43px;
             width: 25px;
         }
