--- a/index.html
+++ b/index.html
@@ -294,12 +294,12 @@ font-size: 43px;
   outline: none;
 }*/
 .arrow:hover {
-  background: rgba(0,0,0,.8);
-  cursor: pointer;
-top: 235px;	
+cursor: pointer;	
+/*  background: rgba(0,0,0,.8);  
+top: 255px;	
 width: 27px;
 height:  27px;
-padding: 10px;
+padding: 10px;*/
 }	    
 
 .left{
