--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ nav li a:hover{
 position: absolute;
 width: 0;/*27px*/
 height: 0;/*27px*/
-top: 366px;
+top: 63%;
 /*background: rgba(0,0,0,.8);*/
 opacity: 0;
 transition: 0.3s ease;
