--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ padding: 10px;*/
 } 
 /*.but*/
 .but{
-margin: 0;
+margin-right: 57px;
 padding: 0; 
         }
         .fa fa-angle-left{
@@ -344,18 +344,21 @@ padding: 0;
 	    
 
 .block4-example2 {       
-    position:absolute;
+position:absolute;
 top: 304px;
 bottom: 0;
 right: 0;
-left: 40px;
+left: 115px;
+padding-left: 115px:
+padding-top: 222px;
+float: left;	
 }
-.block4-example2 p{
-    float: left;
+.block4-example2 p{    
    margin-bottom: 20px;
 }                     
 .block4-title-red{ 
-    color:red;
+    margin-bottom: 62px;    
+    color: red;
     font-family:Arial, Helvetica, sans-serif;
     font-size: 32px;
     font-weight: bold;	 
@@ -519,7 +522,15 @@ margin-top: 13px;
     font-size: 30px;
     font-weight: 600;
 
-}        
+}  
+.block789-title{
+   
+    margin-right: 0;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 600;
+
+} 
 
 /********************************************************10/
 /*  BLOCK10 
