--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ padding: 0;
 
 .block4-example2 {       
 position:absolute;
-top: 270px;
+top: 282px;
 bottom: 0;
 right: 0;
 left: 130px;
@@ -354,10 +354,10 @@ padding-top: 222px;
 float: left;	
 }
 .block4-example2 p{    
-   margin-bottom: 20px;
+   margin-bottom: 0;
 }                     
 .block4-title-red{ 
-    margin-bottom: 62px;    
+    margin-bottom: 0;    
     color: red;
     font-family:Arial, Helvetica, sans-serif;
     font-size: 32px;
@@ -370,7 +370,7 @@ float: left;
     font-weight: bold;      
  }  
 .block4-title-last{ 
-    margin-top: 52px;
+    margin-top: 0;
     color:#FFF;
     font-family:Arial, Helvetica, sans-serif;
     font-size:24px;
