--- a/index.html
+++ b/index.html
@@ -488,17 +488,18 @@ margin-top: 13px;
 }
 
 .block789-example-left{
-    padding-left: 102px:
-    padding-top: 170px;
+    /*padding-left: 102px:
+    padding-top: 170px;**/
     float: left; 
     position: absolute;
-    /*top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;*/
+top: 160px;
+bottom: 0;
+right: 0;
+left: 40px;
+
 }
 .block789-example-left p{
-    margin-bottom:  29px;
+   margin-bottom: 30px;
     
 
 } 
@@ -513,14 +514,14 @@ margin-top: 13px;
     left: 0;*/
 }
 .block789-example-right p{
-    margin-bottom:  26px;
+    margin-bottom:  0;
 }
 .block789-title-red{
-    margin-bottom: 62px;
+    margin-bottom: 0;
     margin-right: 0;
     color: red;
     font-size: 30px;
-    font-weight: 600;
+    
 
 }  
 .block789-title{
@@ -528,7 +529,7 @@ margin-top: 13px;
     margin-right: 0;
     color: #fff;
     font-size: 14px;
-    font-weight: 600;
+   
 
 } 
 
