--- a/indexgood.html
+++ b/indexgood.html
@@ -133,8 +133,14 @@
 		<div class="block6-logo-section2-contacts-information1-text-nav clearfix">
 			<div class="block6-left-text-static-info">
 				<div class="block6-first-item">
-					<p class="block6-title">Reuest a Free Site Survey or Quote</p>
-					<p class="block6-subtitle">UPS Battery and Uninterruptible Power Supply Sales and Installation</p>
+					<ul>
+						<li>
+							<p class="block6-title">Reuest a Free Site Survey or Quote</p>
+						</li>
+						<li>
+							<p class="block6-subtitle">UPS Battery and Uninterruptible Power Supply Sales and Installation</p>
+						</li>
+					<ul>	
 				</div>
 			</div>
 			<div class="right-button">
@@ -145,14 +151,23 @@
 	<section>
 		<div class="block7-content-pic-pic-pic clearfix">
 			<div class="block7-inner-content-pic-pic-pic" id="black">
-				<div class="block7-row clearfix">
-					<div class="content50-pic-pic-pic" style="position: relative">
+				<div class="row">
+					<div class="content50-pic-pic-pic">
 						<div class="inner-content50-pic-pic-pic"><img alt="" src="img/Products.jpg"></div>
-						<div class="block789-example-left" style="position: absolute; top: 0; bottom: 0; right: 0; left: 0;">
-							<p class="block789-title-red">Products</p>
-							<p class="block789-title">Super power is a leading distributor power products and solutions, including</p>
-							<p class="block789-title">batteries, UPS systems, telecom power systems, emergency lighting and DC power</p>
-							<p class="block789-title">systems.</p>
+						<div class="block789-example-left">
+							<ul>
+								<li>
+									<p class="block789-title-red">Products</p>
+								</li>	
+								<li>
+									<p class="block789-title">Super power is a leading distributor power products and solutions, including</p>
+								</li>
+								<li><p class="block789-title">batteries, UPS systems, telecom power systems, emergency lighting and DC power</p>
+								</li>
+								<li>
+									<p class="block789-title">systems.</p>
+								</li>	
+							<ul>	
 						</div>
 					</div>
 					<div class="content25-pic-pic-pic">
@@ -168,7 +183,7 @@
 <section>  
     <div class="block8-content-pic-pic-pic clearfix"-->
 			<div class="block8-inner-content-pic-pic-pic" id="black">
-				<div class="block8-row clearfix">
+				<div class="row">
 					<div class="content25-pic-pic-pic">
 						<div class="inner-content25-pic-pic-pic"><img alt="" src="img/control.jpg"></div>
 					</div>
@@ -177,10 +192,18 @@
 					</div>
 					<div class="content50-pic-pic-pic">
 						<div class="inner-content50-pic-pic-pic"><img alt="" src="img/services.png"></div>
-						<div class="block789-example-right" style="position: absolute; top: 0; bottom: 0; right: 0; left: 0;">
-							<p class="block789-title-red">Services</p>
-							<p class="block789-title">We offer certified and insured installation by trained technicians, emergency repair,</p>
-							<p class="block789-title">rental UPS, maintenance services, battery testing, sizing and more.</p>
+						<div class="block789-example-right">
+							<ul>
+								<li>
+									<p class="block789-title-red">Services</p>
+								</li>	
+								<li>
+									<p class="block789-title">We offer certified and insured installation by trained technicians, emergency repair,</p>
+								</li>
+								<li>
+									<p class="block789-title">rental UPS, maintenance services, battery testing, sizing and more.</p>
+								</li>
+							<ul>	
 						</div>
 					</div>
 				</div>
@@ -190,13 +213,22 @@
 <section>  
     <div class="block9-content-pic-pic-pic clearfix"-->
 			<div class="block9-inner-content-pic-pic-pic" id="black">
-				<div class="block9-row">
-					<div class="content50-pic-pic-pic" style="position: relative;">
+				<div class="row">
+					<div class="content50-pic-pic-pic">
 						<div class="inner-content50-pic-pic-pic"><img alt="" src="img/disposal.jpg"></div>
-						<div class="block789-example-left" style="position: absolute;">
-							<p class="block789-title-red">Battery Disposal</p>
-							<p class="block789-title">From de-installations to removal logistics, we can handle your battery disposal needs.</p>
-							<p class="block789-title">Our disposal services follow all applicable state and federal recycling certitifications.</p>
+						<div class="block789-example-left">
+							<ul>
+								<li>
+									<p class="block789-title-red">Battery Disposal</p>
+								</li>
+								<li>
+									<p class="block789-title">From de-installations to removal logistics, we can handle your battery disposal needs.</p>
+								</li>
+								<li>	
+						
+									<p class="block789-title">Our disposal services follow all applicable state and federal recycling certitifications.</p>
+								</li>
+							</ul>
 						</div>
 					</div>
 					<div class="content25-pic-pic-pic">
@@ -235,7 +267,7 @@
 	<section>
 		<div class="block11-logo-section-upsl-logo-critical-text clearfix">
 			<div class="block11-example2">
-				<div class="block11-row">
+				<div class="row">
 					<div class="content64-nopic-pic">
 						<div class="inner-content64-nopic-pic">
 							<img src=""> <span></span>
@@ -260,7 +292,7 @@
 	<section>
 		<div class="block12-content-pic-pic-pic-pic-pic clearfix">
 			<div class="block12-inner-content-pic-pic-pic-pic-pic">
-				<div class="block12-row">
+				<div class="row">
 					<div class="content20-pic-pic-pic-pic-pic">
 						<div class="inner-content20-pic-pic-pic-pic-pic"><img alt="" src="img/1.jpg" title=""></div>
 					</div>
@@ -306,7 +338,7 @@
 	<section>
 		<div class="block15-contacts-information-before-footer-t-t-t-t clearfix">
 			<div class="block15-inner-static-info-t-t-t-t">
-				<div class="block15-row">
+				<div class="row">
 					<ul>
 						<li class="content25-t-t-t-t">
 							<p><span class="block15-title-red">About Us</span><span class="block15-subtitle">Supplier of superior quality stationary backup battery power products, UPS rentals and services that maximize critical power integrity and customer satisfaction.<br class="next">
