--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@ nav li a:hover{
     float:left;   
     width: 25%; 
     text-align: center;
-    padding: 30px;	
+    padding: 0px;	
 }
 /*.content25-t-t-t-t: last-child{    
     float:left;   
@@ -991,12 +991,16 @@ nav li a:hover{
     font-weight: 300;
     font-size: 12px;
 	float: left;
+	padding: 30px;
+	margin-bottom: 26px;
 }
 .block15-subtitle{
     color: #fff;
     font-weight: 300;
     font-size: 12px;
 	float: left;
+	padding: 30px;
+	margin-bottom: 26px;
 }
 .block15-static-info li p:first-of-type{
     float: left;
