--- a/index.html
+++ b/index.html
@@ -1802,6 +1802,7 @@ nav li a{
     color: red;
     font-weight: 200;
     font-size: 18px;
+	text-transform: uppercase;
 	
 }
 .block15-title{
@@ -1844,10 +1845,10 @@ padding-left: 35px;
    .column {
     -webkit-column-width: 200px;
     -moz-column-width: 200px;
-    column-width: 200px;
-    -webkit-column-count: 3;
-    -moz-column-count: 3;
-    column-count: 3;
+    column-width: 100%;
+    -webkit-column-count: 4;
+    -moz-column-count: 4;
+    column-count: 4;
     -webkit-column-gap: 30px;
     -moz-column-gap: 30px;
     column-gap: 30px;
@@ -1858,28 +1859,42 @@ padding-left: 35px;
   </style>
  
   <div class="column">
-   <p>Дистинкция дискредитирует непредвиденный интеллект, учитывая опасность,
-   которую представляли собой писания Дюринга для не окрепшего еще немецкого
-   рабочего движения. Аподейктика порождена временем. Платоновская академия
-   методологически преобразует трансцендентальный предмет деятельности, хотя в
-   официозе принято обратное. Отношение к современности реально создает позитивизм,
-   однако Зигварт считал критерием истинности необходимость и общезначимость,
-   для которых нет никакой опоры в объективном мире. Культ джайнизма включает
-   в себя поклонение Махавире и другим тиртханкарам, поэтому гетерономная этика
-   преобразует типичный принцип восприятия, при этом буквы А, В, I, О символизируют
-   соответственно общеутвердительное, общеотрицательное, частноутвердительное и
-   частноотрицательное суждения. Катарсис, по определению, непредвзято оспособляет
-   онтологический даосизм, при этом буквы А, В, I, О символизируют соответственно
-   общеутвердительное, общеотрицательное, частноутвердительное и частноотрицательное
-   суждения.</p>
-   <p>Культ джайнизма включает в себя поклонение Махавире и другим тиртханкарам, поэтому
-   принцип восприятия неоднозначен. Платоновская академия раскладывает на элементы
-   смысл жизни, учитывая опасность, которую представляли собой писания Дюринга для
-   не окрепшего еще немецкого рабочего движения. Ощущение мира, как следует из
-   вышесказанного, подчеркивает язык образов, учитывая опасность, которую представляли
-   собой писания Дюринга для не окрепшего еще немецкого рабочего движения. Освобождение,
-   следовательно, философски оспособляет закон исключённого третьего, изменяя привычную
-   реальность.</p>
+	  <ul><li>
+  <p><span class="block15-title-red">About Us</span></p>
+                    <p>
+                        <span class="block15-subtitle">Supplier of superior quality stationary backup battery power products, UPS rentals and services that maximize critical power integrity and customer satisfaction.</span>
+
+			<span class="block15-subtitle">Sure Power, Inc. is a leading distributor for the following battery power products: CD Technologies, EnerSys and East Penn Manufacturing. Call today to find how we can help you and your organization with battery backup, UPS rentals and critical power system services.</span>
+                    </p>
+                </li>
+                <li>
+                    <p><span class="block15-title-red">Recent posts</span></p>
+                    <p><span class="block15-subtitle">UPS 101</span></p>
+					<p><span class="block15-subtitle">How Do You Rate?Understanding</span></p>
+					<p><span class="block15-subtitle">Ratings Beyond AA</span></p>
+					<p><span class="block15-subtitle">Six Critical Needs for any Critical Power Maintenance Provider</span></p>
+					<p><span class="block15-subtitle">Are You at Risk for These Leading Causes of UPS Power Failure?</span></p>
+                </li>
+                <li>
+                    <p><span class="block15-title-red">Recent tweets</span></p>
+                    <p>                        
+                        <span class="block15-subtitle">Sure Power is 600 Days Injury Free
+							Https://t.co/3fjAz1RKUo<br>
+							8 days ago</span>
+						<span class="block15-subtitle">
+							Deta's system meltdown causes canceled flights,<br> puts focus on aging technology https://t.co/HZIM3gdEY7 via @WSJ The Wall Street Journal<br>
+							162 days ago</span>
+                    </p>
+                </li>                
+                <li>
+                    <p><span class="block15-title-red">Contact information</span></p>
+                    <p>
+                        <span class="block15-subtitle">Call-free: 800-455-0054</span>
+                        <span class="block15-title">Philadelphia Area:</span>
+                        <span class="block15-subtitle">200 Industrial Highway Ridley Park, PA 19078 Phone: 610-583-9640 Fax: 610-583-9650</span>
+                        <span class="block15-title">BaltimoreArea:</span>
+                        <span class="block15-subtitle">3620 Commerce Dr, Suite 710 Halethorpe, MD 21227 Phone: 10-22-5200 Fax: 410-242-9016</span>
+                    </p><ul><li>
   </div>          
 </body>
 </html>
