--- a/index.html
+++ b/index.html
@@ -1857,7 +1857,8 @@ padding-left: 35px;
     column-rule: 1px solid #ccc;
    }
   </style>
- 
+ <div class="block15-logo-section clearfix">	
+	 <div class="block15-static-info">
   <div class="column">
 	  <ul><li>
   <p><span class="block15-title-red">About Us</span></p>
@@ -1894,7 +1895,7 @@ padding-left: 35px;
                         <span class="block15-subtitle">200 Industrial Highway Ridley Park, PA 19078 Phone: 610-583-9640 Fax: 610-583-9650</span>
                         <span class="block15-title">BaltimoreArea:</span>
                         <span class="block15-subtitle">3620 Commerce Dr, Suite 710 Halethorpe, MD 21227 Phone: 10-22-5200 Fax: 410-242-9016</span>
-                    </p><ul><li>
+                    </p></ul></li></div></div>
   </div>          
 </body>
 </html>
