--- a/index.html
+++ b/index.html
@@ -1830,7 +1830,7 @@ nav li a{
 .block15-static-info ul li{
     padding-right: 35px;
 padding-left: 35px;	
-    border-right: 1px solid #333;
+    /*border-right: 1px solid #333;*/
     margin-right: 20px;
      
 }
@@ -1845,16 +1845,16 @@ padding-left: 35px;
    .column {
     -webkit-column-width: 200px;
     -moz-column-width: 200px;
-    column-width: 100%;
+    column-width: 200px;
     -webkit-column-count: 4;
     -moz-column-count: 4;
     column-count: 4;
     -webkit-column-gap: 30px;
     -moz-column-gap: 30px;
     column-gap: 30px;
-    -webkit-column-rule: 1px solid #ccc;
-    -moz-column-rule: 1px solid #ccc;
-    column-rule: 1px solid #ccc;
+    -webkit-column-rule: 1px solid red;
+    -moz-column-rule: 1px solid red;
+    column-rule: 1px solid red;
    }
   </style>
  <div class="block15-logo-section clearfix">	
