--- a/index.html
+++ b/index.html
@@ -1846,9 +1846,9 @@ padding-left: 35px;
     -webkit-column-width: 200px;
     -moz-column-width: 200px;
     column-width: 200px;
-    -webkit-column-count: 4;
-    -moz-column-count: 4;
-    column-count: 4;
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
     -webkit-column-gap: 30px;
     -moz-column-gap: 30px;
     column-gap: 30px;
@@ -1859,8 +1859,8 @@ padding-left: 35px;
   </style>
  <div class="block15-logo-section clearfix">	
 	 <div class="block15-static-info">
-  <div class="column">
-	  <ul><li>
+  
+	  <ul ><li class="column">
   <p><span class="block15-title-red">About Us</span></p>
                     <p>
                         <span class="block15-subtitle">Supplier of superior quality stationary backup battery power products, UPS rentals and services that maximize critical power integrity and customer satisfaction.</span>
@@ -1868,7 +1868,7 @@ padding-left: 35px;
 			<span class="block15-subtitle">Sure Power, Inc. is a leading distributor for the following battery power products: CD Technologies, EnerSys and East Penn Manufacturing. Call today to find how we can help you and your organization with battery backup, UPS rentals and critical power system services.</span>
                     </p>
                 </li>
-                <li>
+                <li class="column">
                     <p><span class="block15-title-red">Recent posts</span></p>
                     <p><span class="block15-subtitle">UPS 101</span></p>
 					<p><span class="block15-subtitle">How Do You Rate?Understanding</span></p>
@@ -1876,7 +1876,7 @@ padding-left: 35px;
 					<p><span class="block15-subtitle">Six Critical Needs for any Critical Power Maintenance Provider</span></p>
 					<p><span class="block15-subtitle">Are You at Risk for These Leading Causes of UPS Power Failure?</span></p>
                 </li>
-                <li>
+                <li class="column">
                     <p><span class="block15-title-red">Recent tweets</span></p>
                     <p>                        
                         <span class="block15-subtitle">Sure Power is 600 Days Injury Free
@@ -1887,7 +1887,7 @@ padding-left: 35px;
 							162 days ago</span>
                     </p>
                 </li>                
-                <li>
+                <li class="column">
                     <p><span class="block15-title-red">Contact information</span></p>
                     <p>
                         <span class="block15-subtitle">Call-free: 800-455-0054</span>
@@ -1896,6 +1896,6 @@ padding-left: 35px;
                         <span class="block15-title">BaltimoreArea:</span>
                         <span class="block15-subtitle">3620 Commerce Dr, Suite 710 Halethorpe, MD 21227 Phone: 10-22-5200 Fax: 410-242-9016</span>
                     </p></ul></li></div></div>
-  </div>          
+         
 </body>
 </html>
