--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@ nav li a:hover{
     display: block;
     background-size: cover; 
 }
-/*  BLOCK15  */
+/*  BLOCK15  *//*
 .block15-contacts-information-before-footer-t-t-t-t{
     background: #242424;
     padding: 0;
@@ -966,7 +966,7 @@ nav li a:hover{
 .block15-inner-static-info-t-t-t-t{
     float: left;    
     width: 100%;    
-    min-height: 350px;/*f*/
+    min-height: 350px;
     padding-top: 67px;
 }
 
@@ -975,13 +975,13 @@ nav li a:hover{
     width: 25%;
     border-right: 2px solid #333
     padding: 1px 170px;
-}
+}*/
 
 /*.content25-t-t-t-t: last-child{    
     float:left;   
     width: 20%; 
 }*/
-.block15-title-red{
+/*.block15-title-red{
     color: red;
     font-weight: 600;
     font-size: 18px;
@@ -1033,23 +1033,23 @@ margin-bottom: 26px;
 }
 .content25-t-t-t-t br .next{
     margin-bottom: 24px;
-    font-size: ;/*f*/
+    font-size: ;
 }
 .content25-t-t-t-t br .link{
-    margin-bottom: 28px;/*f*/
-    font-size: ;/*f*/
+    margin-bottom: 28px;
+    font-size: ;
     text-align: center;
 }
 .content25-t-t-t-t br .tweets{
-    margin-bottom: 28px;/*f*/
-    font-size: ;/*f*/
+    margin-bottom: 28px;
+    font-size: ;
     text-align: center;
 }
 .content25-t-t-t-t br .contact{
-    margin-bottom: 28px;/*f*/
-    font-size: ;/*f*/
+    margin-bottom: 28px;
+    font-size: ;
     text-align: center;
-}
+}*/
 
 /*  BLOCK16  */
 .lock16-footer{
@@ -1815,7 +1815,7 @@ nav li a{
   
     font-size: 12px;
 }
-.block15-static-info li p:first-of-type{
+/*.block15-static-info li p:first-of-type{
     float: left;
     margin-right: 15px;
 
@@ -1826,11 +1826,11 @@ nav li a{
 }
 .block15-static-info p > span{
     display: block;
-}
-.block15-static-info ul li{
+}*/
+/*.block15-static-info ul li{
     padding-right: 35px;
 padding-left: 35px;	
-    /*border-right: 1px solid #333;*/
+    border-right: 1px solid #333;
     margin-right: 20px;
      
 }
@@ -1839,7 +1839,7 @@ padding-left: 35px;
     padding-right: 0;
     margin-right: 0;
 padding-left: 35px;	
-}
+}*/
 </style>
   <style>
    .column {
