--- a/index.html
+++ b/index.html
@@ -1860,23 +1860,23 @@ padding-left: 35px;
  <div class="block15-logo-section clearfix">	
 	 <div class="block15-static-info">
   
-	  <ul ><li class="column">
+	  <div class="column">
   <p><span class="block15-title-red">About Us</span></p>
                     <p>
                         <span class="block15-subtitle">Supplier of superior quality stationary backup battery power products, UPS rentals and services that maximize critical power integrity and customer satisfaction.</span>
 
 			<span class="block15-subtitle">Sure Power, Inc. is a leading distributor for the following battery power products: CD Technologies, EnerSys and East Penn Manufacturing. Call today to find how we can help you and your organization with battery backup, UPS rentals and critical power system services.</span>
                     </p>
-                </li>
-                <li class="column">
+                </div>
+                <div class="column">
                     <p><span class="block15-title-red">Recent posts</span></p>
                     <p><span class="block15-subtitle">UPS 101</span></p>
 					<p><span class="block15-subtitle">How Do You Rate?Understanding</span></p>
 					<p><span class="block15-subtitle">Ratings Beyond AA</span></p>
 					<p><span class="block15-subtitle">Six Critical Needs for any Critical Power Maintenance Provider</span></p>
 					<p><span class="block15-subtitle">Are You at Risk for These Leading Causes of UPS Power Failure?</span></p>
-                </li>
-                <li class="column">
+                </div>
+                <div class="column">
                     <p><span class="block15-title-red">Recent tweets</span></p>
                     <p>                        
                         <span class="block15-subtitle">Sure Power is 600 Days Injury Free
@@ -1886,8 +1886,8 @@ padding-left: 35px;
 							Deta's system meltdown causes canceled flights,<br> puts focus on aging technology https://t.co/HZIM3gdEY7 via @WSJ The Wall Street Journal<br>
 							162 days ago</span>
                     </p>
-                </li>                
-                <li class="column">
+                </div>                
+                <div class="column">
                     <p><span class="block15-title-red">Contact information</span></p>
                     <p>
                         <span class="block15-subtitle">Call-free: 800-455-0054</span>
@@ -1895,7 +1895,7 @@ padding-left: 35px;
                         <span class="block15-subtitle">200 Industrial Highway Ridley Park, PA 19078 Phone: 610-583-9640 Fax: 610-583-9650</span>
                         <span class="block15-title">BaltimoreArea:</span>
                         <span class="block15-subtitle">3620 Commerce Dr, Suite 710 Halethorpe, MD 21227 Phone: 10-22-5200 Fax: 410-242-9016</span>
-                    </p></ul></li></div></div>
+                    </p></div></div></div>
          
 </body>
 </html>
